# bodu

./: .gitignore  .gitmodules  CONTRIBUTORS.md  Cargo.toml  IDEAS.md  README.md  STDLIB.md  SYNTAX.MD  SYNTAX.md  TODO.md  build.rs  first.bodu
bodu-compiler/: Cargo.toml
bodu-compiler/src/: lib.rs
bodu-script/: Cargo.toml
bodu-script/src/: lib.rs  s1.rs  s2.rs  s3.rs  s4.rs
bodu-std/: Cargo.toml
bodu-std/src/: array.rs  buffer.rs  event.rs  iter.rs  json.rs  lib.rs  math.rs  object.rs  os.rs  readline.rs  regex.rs  string.rs
bodu-vm/: Cargo.toml
bodu-vm/src/: lib.rs  op.rs  opfn.rs
cbodu/: Cargo.toml  cbodu.h
cbodu/src/: lib.rs  op.rs
src/: lib.rs  main.rs
src/libstd/: array.rs  buffer.rs  event.rs  iter.rs  json.rs  math.rs  mod.rs  object.rs  os.rs
src/script/: mod.rs  s1.rs  s2.rs  s3.rs  s4.rs
src/vm/: mod.rs  op.rs  opfn.rs
