[package]
name = "bodu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.41"
rustyline = "16.0.0"
tokio = { version = "1.46.1", features = ["full"] }
bodu-vm = { path = "./bodu-vm" }
bodu-script = { path = "./bodu-script" }
bodu-std = { path = "./bodu-std" }
cbodu = { path = "./cbodu" }
bodu-compiler = { path = "./bodu-compiler" }