[package]
name = "bodu-std"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
base64 = "0.22.1"
bodu-vm = { path = "../bodu-vm" }
tokio = { version = "1.46.1", features = ["full"] }
bodu-script = { path = "../bodu-script" }
regex = "1.11.1"
rustyline = "16.0.0"
libloading = "0.8.8"